jomini_derive/tests/compile-fail/tokens.stderr
error: proc-macro derive panicked
 --> tests/compile-fail/tokens.rs:4:10
  |
4 | #[derive(JominiDeserialize)]
  |          ^^^^^^^^^^^^^^^^^
  |
  = help: message: Model does not have #[jomini(token = x)] defined for all fields
